/*
 * $Id: ChangeLog,v 1.6353 2009/01/29 16:30:40 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-01-29 22:36 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * makefile.bc
  * makefile.dc
  * makefile.wc
    - Synched with makefile.vc

2009-01-29 11:57 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
   * common.mak
   * compile.mak
     + Added new use_dll.lib
     - Moved mainstd.c and mainwin.c from dllmain.lib to use_dll.lib

   * makefile.vc
     + Added $(USE_DLL_LIB) : $(USE_DLL_LIB_OBJS)
     * Replaced $(DLL_MAIN_LIB) with $(USE_DLL_LIB) in DLLEXE_LINK_CMD
     /*
        Please synch these changes to makefile.* of other compilers
      */

   * mdir.bat
     * Add import lib harbour.lib to appropriate compiler sub folder of \xharbour\lib


   * source/vm/maindlle.c
     * Changed to use hb_vmProcessPrgDllSymbols() for better self describing
     + Added comment:
        /*
          NOTE: This source should be compiled into dllmain.lib
                and linked to any dll of prg code, which will be
                staticly linked against harbour.dll

          WARNING: Do NOT link this into any EXE application!

                   EXE applications which are staticly linked
                   against harbour.dll, should be linked to usedll.c
                   by means of use_dll.lib!
        */


   * source/vm/maindllh.c
     * Changed to use hb_vmProcessSysDllSymbols() for better self describing
     + Added comment:
        /*
          NOTE: This is a system source linked into harbour.dll

          WARNING: Do NOT link this into other dll!

                   DLL applications which are staticly linked
                   against harbour.dll, should be linked to maindlle.c
                   by means of dllmain.lib!
        */

   + source/vm/usedll.c