@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6353 2009/01/29 16:30:40 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.6354 2009/01/29 21:35:31 enricomaria Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-01-30 14:20 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
+   * source/vm/errorapi.c
+     * Make sure that error object always has the call stack info in :aaStack
+  * source/vm/arrays.c
+    * Minor optimization in hb_arrayDel()
 
 2009-01-29 22:36 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * makefile.bc
